<resources>
    <string name="app_name">Tapestry</string>
    <string name="almost_there">Almost there!</string>
    <string name="continue_button">Continue</string>
    <string name="next_button">Next</string>
    <string name="african_american">African American</string>
    <string name="chinese">Chinese</string>
    <string name="cuban">Cuban</string>
    <string name="indian">Indian</string>
    <string name="puerto_rican">Puerto Rican</string>
    <string name="art">Art</string>
    <string name="history">History</string>
    <string name="food">Food</string>
    <string name="language">Language</string>
    <string name="community">Community</string>
</resources>